@@ -1,44 +1,5 @@
 {
-    "name": "n98/magerun",
-    "description": "Tools for managing Magento projects and installations",
-    "license": "MIT",
-    "support": {
-        "issues": "https://github.com/netz98/n98-magerun/issues"
-    },
-    "homepage": "http://netz98.github.com/n98-magerun/",
-    "keywords": ["magento", "installer", "cli"],
     "require": {
-        "php": ">=5.3.3",
-        "symfony/console": "2.3.4",
-        "symfony/event-dispatcher": "2.3.4",
-        "symfony/finder": "2.3.4",
-        "symfony/yaml": "2.3.4",
-        "symfony/process": "2.3.4",
-        "symfony/validator": "2.3.4",
-        "n98/junit-xml": "dev-master",
-        "fzaninotto/faker": "1.2.0",
-        "composer/composer": "dev-master",
-        "twig/twig": "1.*",
-        "ocramius/proxy-manager": "0.4.*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "3.7.24"
-    },
-    "autoload": {
-        "psr-0": {
-            "N98": "src",
-            "Composer": "src"
-        }
-    },
-    "authors": [
-        {
-            "name": "Christian Münch",
-            "email": "c.muench@netz98.de"
-        },
-        {
-            "name": "Alexander Menk",
-            "email": "a.menk@netz98.de"
-        }
-    ],
-    "bin": ["bin/n98-magerun"]
+
+    }
 }
